[package]
name = "rust-lstar"
version = "0.2.0"
edition = "2021"
description = "L* (Angluin's) Grammatical Inference Algorithm for learning Deterministic Finite Automata"
license = "GPL-3.0"
repository = "https://github.com/arpan-vs/rust-lstar"
keywords = ["automata", "learning", "lstar", "inference", "dfa"]
categories = ["algorithms", "science"]

[dependencies]
itertools = "0.14"
indexmap = "2.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde_json = "1.0"
smallvec = "1.13"
